<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MTGInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_blocks">Blocks</string>
    <string name="search_name">Name</string>
    <string name="search_color">Colors</string>
    <string name="search_button">Search</string>
    <string name="search_blue">Blue</string>
    <string name="search_red">Red</string>
    <string name="search_green">Green</string>
    <string name="search_black">Black</string>
    <string name="search_white">White</string>
    <string name="search_colorless">Colorless</string>
    <string name="search_land">Land</string>
    <string name="search_multi">Require Gold</string>
    <string name="search_exclude">Exclude Unselected</string>
    <string name="search_mana">Mana Cost</string>
    <string name="search_power">Power</string>
    <string name="search_tough">Toughness</string>
    <string name="search_rarite">Rarity</string>
    <string name="search_mythic">Mythic rare</string>
    <string name="search_rare">Rare</string>
    <string name="search_uncommon">Uncommon</string>
    <string name="search_common">Common</string>
    <string name="search_bland">Basic Land</string>
    <string name="search_special">Special</string>
    <string name="img_url">http://www.magiccards.info/scans/en/</string>
    <string name="sitemap_url">http://www.magiccards.info/sitemap.html</string>
    <string name="base_url">http://www.magiccards.info</string>
    <string name="base_search_url">http://www.magiccards.info/query?v=list&amp;s=cname</string>

    <string-array name="compares">
        <item>=</item>
        <item>&gt;=</item>
        <item>&lt;=</item>
        <item>&gt;</item>
        <item>&lt;</item>
    </string-array>

</resources>
