<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_name"
                android:id="@+id/name_tv"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_et"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_color"
                android:id="@+id/textView6"
                android:textSize="18sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_red"
                    android:id="@+id/srch_red_cb"
                    android:layout_weight="1"
                    android:textSize="12sp" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_blue"
                    android:id="@+id/srch_blue_cb"
                    android:layout_weight="1"
                    android:textSize="12sp" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_green"
                    android:id="@+id/srch_green_cb"
                    android:layout_weight="1.2"
                    android:textSize="12sp" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_black"
                    android:id="@+id/srch_black_cb"
                    android:layout_weight="1.2"
                    android:textSize="12sp" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_white"
                    android:id="@+id/srch_white_cb"
                    android:layout_weight="1.2"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_multi"
                    android:id="@+id/srch_gold_cb"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_exclude"
                    android:id="@+id/srch_exclude_cb"
                    android:layout_weight="1.4" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_colorless"
                    android:id="@+id/srch_colorless_cb"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_land"
                    android:id="@+id/srch_land_cb"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_mana"
                android:id="@+id/textView7"
                android:textSize="18sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/mana_spinner"
                    android:layout_weight=".7" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/mana_et"
                    android:layout_weight="1.8"
                    android:layout_marginRight="5dp"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_power"
                android:id="@+id/textView8"
                android:textSize="18sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/power_spinner"
                    android:layout_weight=".7" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/power_et"
                    android:layout_weight="1.8"
                    android:layout_marginRight="5dp"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_tough"
                android:id="@+id/textView9"
                android:textSize="18sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/tough_spinner"
                    android:layout_weight=".7" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tough_et"
                    android:layout_weight="1.8"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_rarite"
                android:id="@+id/textView10"
                android:textSize="18sp"
                android:visibility="gone" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_mythic"
                    android:id="@+id/mythic_cb" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_rare"
                    android:id="@+id/rare_cb" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_uncommon"
                    android:id="@+id/uncommon_cb" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_common"
                    android:id="@+id/common_cb" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_bland"
                    android:id="@+id/bland_cb" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_special"
                    android:id="@+id/special_cb" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:id="@+id/search_but"
        android:layout_alignParentBottom="true" />


</RelativeLayout>